Add docstrings and refactor the Rados implementations into separate modules
* Add docstrings for both the CLS and Client implementations

* Remove useless files from CLS

* Refactor RADOS scanner implmentations into `scanner_rados.h/.cc`

* Change terminology of `Object` to `RadosObject`

--- a/cpp/src/arrow/dataset/CMakeLists.txt
+++ b/cpp/src/arrow/dataset/CMakeLists.txt
@@ -29,6 +29,7 @@ set(ARROW_DATASET_SRCS
     partition.cc
     projector.cc
     scanner.cc
+    scanner_rados.cc
     rados_utils.cc
     rados.cc
     mockrados.cc)
