optional build for RADOS implmentations

--- a/cpp/src/arrow/dataset/CMakeLists.txt
+++ b/cpp/src/arrow/dataset/CMakeLists.txt
@@ -21,21 +21,24 @@ arrow_install_all_headers("arrow/dataset")
 
 set(ARROW_DATASET_SRCS
     dataset.cc
-    dataset_rados.cc
     discovery.cc
     file_base.cc
     file_ipc.cc
     filter.cc
     partition.cc
     projector.cc
-    scanner.cc
-    scanner_rados.cc
-    rados_utils.cc
-    rados.cc
-    mockrados.cc)
+    scanner.cc)
 
 set(ARROW_DATASET_LINK_STATIC arrow_static)
 set(ARROW_DATASET_LINK_SHARED arrow_shared)
+
+if(ARROW_RADOS)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} dataset_rados.cc)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} scanner_rados.cc)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados_util.cc)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados.cc)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} mockrados.cc)
+endif()
 
 if(ARROW_CSV)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} file_csv.cc)
@@ -111,13 +114,16 @@ function(ADD_ARROW_DATASET_TEST REL_TEST_NAME)
 endfunction()
 
 add_arrow_dataset_test(dataset_test)
-add_arrow_dataset_test(dataset_rados_test)
 add_arrow_dataset_test(discovery_test)
 add_arrow_dataset_test(file_ipc_test)
 add_arrow_dataset_test(file_test)
 add_arrow_dataset_test(filter_test)
 add_arrow_dataset_test(partition_test)
 add_arrow_dataset_test(scanner_test)
+
+if(ARROW_RADOS)
+  add_arrow_dataset_test(dataset_rados_test)
+endif()
 
 if(ARROW_CSV)
   add_arrow_dataset_test(file_csv_test)
