--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -342,6 +342,14 @@ if(ARROW_DATASET)
   set(ARROW_FILESYSTEM ON)
 endif()
 
+if(ARROW_CLS)
+  set(ARROW_RADOS ON)
+endif()
+
+if(ARROW_RADOS)
+  set(ARROW_DATASET ON)
+endif()
+
 if(ARROW_PARQUET)
   set(ARROW_COMPUTE ON)
 endif()
