Integrate CLS build with the Arrow build system
Unify the build of CLS and client. Now upon building arrow,
the CLS test and libraries also gets built through the arrow build
system and it can be then copied into OSDs to use `RadosDataset`
end-to-end.

* Add `-DARROW_CLS` switch to toggle the CLS build

* Add `-DARROW_RADOS` switch for optionally building RadosDataset

* Integrate CLS build within arrow build

* Restructure CLS sub-directory

* Bring out CLS code from `src` folder

* Build mockrados.cc only when building tests

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -163,9 +163,6 @@ endif()
 find_package(ClangTools)
 find_package(InferTools)
 
-find_package(librados REQUIRED)
-include_directories(${LIBRADOS_INCLUDE_DIR})
-
 if("$ENV{CMAKE_EXPORT_COMPILE_COMMANDS}" STREQUAL "1" OR CLANG_TIDY_FOUND OR INFER_FOUND)
   # Generate a Clang compile_commands.json "compilation database" file for use
   # with various development tools, such as Vim's YouCompleteMe plugin.
@@ -345,6 +342,14 @@ endif()
 if(ARROW_DATASET)
   set(ARROW_COMPUTE ON)
   set(ARROW_FILESYSTEM ON)
+endif()
+
+if(ARROW_CLS)
+  set(ARROW_RADOS ON)
+endif()
+
+if(ARROW_RADOS)
+  set(ARROW_DATASET ON)
 endif()
 
 if(ARROW_PARQUET)
