integrate CLS build within arrow build

--- a/cpp/src/arrow/CMakeLists.txt
+++ b/cpp/src/arrow/CMakeLists.txt
@@ -461,6 +461,10 @@ if(ARROW_ORC)
   list(APPEND ARROW_SRCS adapters/orc/adapter.cc adapters/orc/adapter_util.cc)
 endif()
 
+if(ARROW_CLS)
+  list(APPEND ARROW_SRCS adapters/skyhookdm-ceph-cls/src/cls_arrow.cc)
+endif()
+
 if(NOT APPLE AND NOT MSVC_TOOLCHAIN)
   # Localize thirdparty symbols using a linker version script. This hides them
   # from the client application. The OS X linker does not support the
@@ -683,6 +687,10 @@ endif()
 
 if(ARROW_ORC)
   add_subdirectory(adapters/orc)
+endif()
+
+if(ARROW_CLS)
+  add_subdirectory(adapters/skyhookdm-ceph-cls)
 endif()
 
 if(ARROW_PYTHON)
