--- a/cpp/src/arrow/dataset/CMakeLists.txt
+++ b/cpp/src/arrow/dataset/CMakeLists.txt
@@ -43,7 +43,10 @@ if(ARROW_RADOS)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} scanner_rados.cc)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados_utils.cc)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados.cc)
-  # set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} mockrados.cc)
+
+  if(ARROW_BUILD_TESTS)
+    set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} mockrados.cc)
+  endif()
 endif()
 
 if(ARROW_CSV)
