change test_utils.h to cls_arrow_test_utils.h

--- a/cpp/src/arrow/adapters/skyhookdm-ceph-cls/CMakeLists.txt
+++ b/cpp/src/arrow/adapters/skyhookdm-ceph-cls/CMakeLists.txt
@@ -41,7 +41,7 @@ endforeach()
 add_arrow_test(cls_arrow_test
                SOURCES
                cls_arrow_test.cc
-               test_utils.cc
+               cls_arrow_test_utils.cc
                EXTRA_LINK_LIBS
                ${ARROW_DATASET_TEST_LINK_LIBS}
                PREFIX
