--- a/cpp/src/arrow/adapters/skyhookdm-ceph-cls/arrow-cls.pc.in
+++ b/cpp/src/arrow/adapters/skyhookdm-ceph-cls/arrow-cls.pc.in
@@ -21,5 +21,5 @@ includedir=@CMAKE_INSTALL_FULL_INCLUDEDIR@
 Name: Apache Arrow CLS
 Description: Apache Arrow CLS
 Version: @ARROW_VERSION@
-Requires: arrow arrow_dataset
+Requires: arrow_dataset parquet
 Libs: -L${libdir} -larrow_dataset
