--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
@@ -62,6 +62,7 @@ RUN \
     liblz4-dev \
     libre2-dev \
     libsnappy-dev \
+    libradospp-dev \
     libssl-dev \
     libutf8proc-dev \
     libzstd-dev \
