--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
@@ -68,6 +68,7 @@ RUN \
     libprotoc-dev \
     libre2-dev \
     libsnappy-dev \
+    libradospp-dev \
     libssl-dev \
     libutf8proc-dev \
     libzstd1-dev \
