--- a/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
+++ b/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
@@ -22,6 +22,7 @@ Build-Depends:
   libprotoc-dev,
   libre2-dev,
   libsnappy-dev,
+  libradospp-dev,
   libssl-dev,
   libutf8proc-dev,
   libzstd1-dev,
