--- a/dev/tasks/linux-packages/apache-arrow/apt/debian-stretch/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/debian-stretch/Dockerfile
@@ -71,6 +71,7 @@ RUN \
     libre2-dev \
     libsnappy-dev \
     libradospp-dev \
+    rados-objclass-dev \
     libssl-dev \
     libutf8proc-dev \
     libzstd-dev \
