--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
@@ -69,6 +69,7 @@ RUN \
     libre2-dev \
     libsnappy-dev \
     libradospp-dev \
+    rados-objclass-dev \
     libssl-dev \
     libutf8proc-dev \
     libzstd1-dev \
