--- a/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
+++ b/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
@@ -23,6 +23,7 @@ Build-Depends:
   libre2-dev,
   libsnappy-dev,
   libradospp-dev,
+  rados-objclass-dev,
   libssl-dev,
   libutf8proc-dev,
   libzstd1-dev,
