--- a/cpp/src/arrow/adapters/skyhookdm-ceph-cls/CMakeLists.txt
+++ b/cpp/src/arrow/adapters/skyhookdm-ceph-cls/CMakeLists.txt
@@ -1,3 +1,20 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+
 add_custom_target(cls_arrow)
 arrow_install_all_headers("arrow/adapters/skyhookdm-ceph-cls")
 
@@ -25,7 +42,6 @@ add_arrow_lib(cls_arrow
               ${ARROW_CLS_LINK_SHARED}
               STATIC_LINK_LIBS
               ${ARROW_CLS_LINK_STATIC})
-
 
 if(ARROW_TEST_LINKAGE STREQUAL "static")
   set(ARROW_DATASET_TEST_LINK_LIBS arrow_dataset_static ${ARROW_TEST_STATIC_LINK_LIBS})
