--- a/dev/tasks/linux-packages/apache-arrow/debian/control.in
+++ b/dev/tasks/linux-packages/apache-arrow/debian/control.in
@@ -20,6 +20,8 @@ Build-Depends:
   liblz4-dev,
   libre2-dev,
   libsnappy-dev,
+  libradospp-dev,
+  rados-objclass-dev,
   libssl-dev,
   libutf8proc-dev,
   libzstd-dev,
