Fix travis builds (I), lint, archery builds, and relates changes
* Add librados package in all the Dockerfiles

* Fix the linting errors

* Add missing license

* Make building `RadosDataset` API optional

* Fix apidoc issues

* Update `run-cmake-format.py`

* Update archery and Dockerfules

* Fix issues brought up by the `ubuntu-cpp-sanitizer` image

* Add `rados-objclass-dev` to Dockerfiles

* Update `ceph::bufferlist` usage

* Move mocks to test files

* Fix the `rand_r` function usage

* Refactor `char_to_int` and `int_to_char` functions

* Remove `mockrados.h/.cc`

--- a/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
@@ -70,6 +70,8 @@ RUN \
     liblz4-dev \
     libre2-dev \
     libsnappy-dev \
+    libradospp-dev \
+    rados-objclass-dev \
     libssl-dev \
     libthrift-dev \
     libutf8proc-dev \
