--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -233,7 +233,8 @@ services:
       /bin/bash -c "
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
-        /arrow/ci/scripts/cpp_test.sh /arrow /build" 
+        /arrow/ci/scripts/cpp_test.sh /arrow /build && 
+        cat /build/cpp/test-cluster/log/osd.log" 
 
   ubuntu-cpp:
     # Usage:
