--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -234,6 +234,7 @@ services:
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
         /arrow/ci/scripts/cpp_test.sh /arrow /build && 
+        ls /build/cpp/test-cluster/ && 
         cat /build/cpp/test-cluster/log/osd.log" 
 
   ubuntu-cpp:
