--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -233,9 +233,7 @@ services:
       /bin/bash -c "
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
-        /arrow/ci/scripts/cpp_test.sh /arrow /build && 
-        ls /build/cpp/test-cluster/ && 
-        cat /build/cpp/test-cluster/log/osd.log" 
+        /arrow/ci/scripts/cpp_test.sh /arrow /build"
 
   ubuntu-cpp:
     # Usage:
