--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
       env:
         ARCH: arm64v8
         ARROW_CI_MODULES: "CPP"
-        DOCKER_IMAGE_ID: ubuntu-cpp-cls
+        DOCKER_IMAGE_ID: ubuntu-cpp
         # ARROW_USE_GLOG=OFF is needed to avoid build error caused by
         # glog and CMAKE_UNITY_BUILD=ON.
         #
@@ -49,9 +49,9 @@ jobs:
         # on Travis CI.
         DOCKER_RUN_ARGS: >-
           "
-          -e ARROW_BUILD_STATIC=ON
+          -e ARROW_BUILD_STATIC=OFF
           -e ARROW_ORC=OFF
-          -e ARROW_CLS=ON
+          -e ARROW_RADOS=ON
           -e ARROW_S3=OFF
           -e ARROW_USE_GLOG=OFF
           -e CMAKE_UNITY_BUILD=ON
@@ -65,7 +65,6 @@ jobs:
           -e ARROW_BUILD_TESTS=OFF
           -e ARROW_GANDIVA=OFF
           -e ARROW_PARQUET=OFF
-          -e ARROW_CLS=ON
           "
         # The LLVM's APT repository provides only arm64 binaries.
         # We should use LLVM provided by Ubuntu.
