--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,7 @@ x-hierarchy:
     - ubuntu-lint
     - ubuntu-python:
       - ubuntu-docs
+      - ubuntu-python-cls
     - ubuntu-r
   - ubuntu-cuda-cpp:
     - ubuntu-cuda-python
@@ -646,6 +647,38 @@ services:
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
         /arrow/ci/scripts/cpp_test.sh /arrow /build"
+  
+  ubuntu-python-cls:
+    # Usage:
+    #   docker-compose build ubuntu-cpp
+    #   docker-compose run --rm ubuntu-cpp
+    # Parameters:
+    #   ARCH: amd64, arm64v8, s390x, ...
+    #   UBUNTU: 16.04, 18.04, 20.04
+    image: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-cpp
+    build:
+      context: .
+      dockerfile: ci/docker/ubuntu-${UBUNTU}-cpp.dockerfile
+      cache_from:
+        - ${REPO}:${ARCH}-ubuntu-${UBUNTU}-cpp
+      args:
+        arch: ${ARCH}
+        base: "${ARCH}/ubuntu:${UBUNTU}"
+        clang_tools: ${CLANG_TOOLS}
+        llvm: ${LLVM}
+    shm_size: *shm-size
+    ulimits: *ulimits
+    environment:
+      <<: *ccache
+      ARROW_ENABLE_TIMING_TESTS:  # inherit
+      ARROW_CLS: "ON"
+    volumes: *ubuntu-volumes
+    command: &cpp-python-command >
+      /bin/bash -c "
+        /arrow/ci/scripts/cpp_build.sh /arrow /build &&
+        /arrow/ci/scripts/python_build.sh /arrow /build &&
+        /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
+        /arrow/ci/scripts/python_test.sh /arrow"
 
   conda-python-pandas:
     # Possible $PANDAS parameters:
