--- a/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
@@ -71,6 +71,7 @@ RUN \
     libre2-dev \
     libsnappy-dev \
     libradospp-dev \
+    python3-rados \
     rados-objclass-dev \
     libssl-dev \
     libthrift-dev \
