--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
@@ -63,6 +63,7 @@ RUN \
     libre2-dev \
     libsnappy-dev \
     libradospp-dev \
+    python3-rados \
     rados-objclass-dev \
     libssl-dev \
     libutf8proc-dev \
