--- a/dev/tasks/linux-packages/apache-arrow/debian/control
+++ b/dev/tasks/linux-packages/apache-arrow/debian/control
@@ -21,6 +21,7 @@ Build-Depends:
   libre2-dev,
   libsnappy-dev,
   libradospp-dev,
+  python3-rados,
   rados-objclass-dev,
   libssl-dev,
   libutf8proc-dev,
