--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -588,9 +588,8 @@ services:
       ARROW_ENABLE_TIMING_TESTS:  # inherit
       ARROW_CLS: "ON"
       ARROW_RADOS: "ON"
-      ARROW_PYTHON: "ON"
     volumes: *ubuntu-volumes
-    command: &cpp-python-command >
+    command: &python-cls-command >
       /bin/bash -c "
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
