Add RadosDataset Factory for creating RadosDataset out of object list and cluster handle
* Implemented a `RadosDatasetFactory` to create a `RadosDataset` only from the list of objects and the cluster handle. The factory currently scans the Schema of the Table from the first object of the list and assumes it to be the Schema of the entire dataset.

* Also, prevented CLS test binaries from being executed if unit tests are not built.

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,7 @@ jobs:
         LLVM: "10"
         UBUNTU: "20.04"
 
-    - name: "C++ on ARM (with Rados CLS)"
+    - name: "C++ on ARM (with RADOS CLS)"
       os: linux
       arch: arm64
       env:
