--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-bionic/Dockerfile
@@ -55,6 +55,7 @@ RUN \
     libsnappy-dev \
     libradospp-dev \
     rados-objclass-dev \
+    python3-dev \
     libssl-dev \
     libutf8proc-dev \
     libzstd-dev \
