--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,7 @@ x-hierarchy:
   - ubuntu-cpp:
     - ubuntu-cpp-cmake32
     - ubuntu-cpp-cls
+    - ubuntu-python-cls
     - ubuntu-c-glib:
       - ubuntu-ruby
     - ubuntu-lint
@@ -645,6 +646,29 @@ services:
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
         /arrow/ci/scripts/cpp_test.sh /arrow /build"
+
+  ubuntu-python-cls:
+    image: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-python-3
+    build:
+      context: .
+      dockerfile: ci/docker/linux-apt-python-3.dockerfile
+      cache_from:
+        - ${REPO}:${ARCH}-ubuntu-${UBUNTU}-python-3
+      args:
+        base: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-cpp
+    shm_size: *shm-size
+    environment:
+      <<: *ccache
+      ARROW_ENABLE_TIMING_TESTS:  # inherit
+      ARROW_CLS: "ON"
+      ARROW_RADOS: "ON"
+    volumes: *ubuntu-volumes
+    command: &python-cls-command >
+      /bin/bash -c "
+        /arrow/ci/scripts/cpp_build.sh /arrow /build &&
+        /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
+        /arrow/ci/scripts/python_build.sh /arrow /build &&
+        /arrow/ci/scripts/python_test.sh /arrow"
 
   conda-python-pandas:
     # Possible $PANDAS parameters:
