--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-groovy/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-groovy/Dockerfile
@@ -57,6 +57,7 @@ RUN \
     libsnappy-dev \
     libradospp-dev \
     rados-objclass-dev \
+    python3-dev \
     libssl-dev \
     libthrift-dev \
     libutf8proc-dev \
