--- a/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/debian-buster/Dockerfile
@@ -62,7 +62,7 @@ RUN \
     libsnappy-dev \
     libradospp-dev \
     rados-objclass-dev \
-    python3-dev \
+    python3-rados \
     libssl-dev \
     libthrift-dev \
     libutf8proc-dev \
