--- a/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
+++ b/dev/tasks/linux-packages/apache-arrow/apt/ubuntu-xenial/Dockerfile
@@ -58,7 +58,7 @@ RUN \
     libsnappy-dev \
     libradospp-dev \
     rados-objclass-dev \
-    python3-dev \
+    python3-rados \
     libssl-dev \
     libutf8proc-dev \
     libzstd1-dev \
