--- a/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
+++ b/dev/tasks/linux-packages/apache-arrow/debian.ubuntu-xenial/control
@@ -25,7 +25,7 @@ Build-Depends:
   libsnappy-dev,
   libradospp-dev,
   rados-objclass-dev,
-  python3-dev,
+  python3-rados,
   libssl-dev,
   libutf8proc-dev,
   libzstd1-dev,
