--- a/dev/tasks/linux-packages/apache-arrow/debian/control.in
+++ b/dev/tasks/linux-packages/apache-arrow/debian/control.in
@@ -22,7 +22,7 @@ Build-Depends:
   libsnappy-dev,
   libradospp-dev,
   rados-objclass-dev,
-  python3-dev,
+  python3-rados,
   libssl-dev,
   libutf8proc-dev,
   libzstd-dev,
