--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -794,6 +794,7 @@ services:
         llvm: ${LLVM}
     shm_size: *shm-size
     ulimits: *ulimits
+    privileged: true
     environment:
       <<: *ccache
       ARROW_ENABLE_TIMING_TESTS:  # inherit
