--- a/.travis.yml
+++ b/.travis.yml
@@ -228,6 +228,8 @@ script:
   - |
     ulimit -c unlimited || :
   - |
+    export KERNEL=$(uname-r)
+    echo ${KERNEL}
     archery docker run \
       ${DOCKER_RUN_ARGS} \
       --volume ${PWD}/build:/build \
