Refactor into RadosParquetFileFormat

--- a/cpp/src/arrow/dataset/CMakeLists.txt
+++ b/cpp/src/arrow/dataset/CMakeLists.txt
@@ -44,7 +44,7 @@ if(ARROW_RADOS)
   set(ARROW_DATASET_LINK_SHARED ${ARROW_DATASET_LINK_SHARED} ${LIBCEPHFS_LIBRARIES})
   set(ARROW_DATASET_LINK_SHARED ${ARROW_DATASET_LINK_SHARED} ${LIBCEPHFS_LIBRARIES})
 
-  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} dataset_rados.cc)
+  set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} file_parquet_rados.cc)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados_utils.cc)
   set(ARROW_DATASET_SRCS ${ARROW_DATASET_SRCS} rados.cc)
 endif()
@@ -128,10 +128,6 @@ add_arrow_dataset_test(file_ipc_test)
 add_arrow_dataset_test(file_test)
 add_arrow_dataset_test(partition_test)
 add_arrow_dataset_test(scanner_test)
-
-if(ARROW_RADOS)
-  add_arrow_dataset_test(dataset_rados_test)
-endif()
 
 if(ARROW_CSV)
   add_arrow_dataset_test(file_csv_test)
