--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -815,6 +815,7 @@ services:
       args:
         base: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-cpp
     shm_size: *shm-size
+    privileged: true
     environment:
       <<: *ccache
       ARROW_ENABLE_TIMING_TESTS:  # inherit
@@ -824,8 +825,8 @@ services:
     command: &python-cls-command >
       /bin/bash -c "
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
-        /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
         /arrow/ci/scripts/python_build.sh /arrow /build &&
+        /arrow/ci/scripts/integration_ceph.sh /arrow /build &&
         /arrow/ci/scripts/python_test.sh /arrow"
 
   conda-python-pandas:
