--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -848,7 +848,7 @@ services:
       ARROW_CLS: "ON"
       ARROW_RADOS: "ON"
     volumes: *ubuntu-volumes
-    command: &python-cls-command >
+    command: &demo-cls-command >
       /bin/bash -c "
         /arrow/ci/scripts/cpp_build.sh /arrow /build &&
         /arrow/ci/scripts/python_build.sh /arrow /build &&
