--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -831,29 +831,12 @@ services:
         /arrow/ci/scripts/python_test.sh /arrow"
 
   ubuntu-cls-demo:
-    image: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-python-3
-    build:
-      context: .
-      dockerfile: ci/docker/linux-apt-python-3.dockerfile
-      cache_from:
-        - ${REPO}:${ARCH}-ubuntu-${UBUNTU}-python-3
-      args:
-        base: ${REPO}:${ARCH}-ubuntu-${UBUNTU}-cpp
-    shm_size: *shm-size
-    privileged: true
+    image: jcnitdgp25/skyhookdm-arrow:latest
     ports:
       - 8888:8888
-    environment:
-      <<: *ccache
-      ARROW_ENABLE_TIMING_TESTS:  # inherit
-      ARROW_CLS: "ON"
-      ARROW_RADOS: "ON"
-    volumes: *ubuntu-volumes
     command: &demo-cls-command >
       /bin/bash -c "
-        /arrow/ci/scripts/cpp_build.sh /arrow /build &&
-        /arrow/ci/scripts/python_build.sh /arrow /build &&
-        /arrow/ci/scripts/demo.sh /arrow /build"
+        /arrow/ci/scripts/demo.sh"
 
   conda-python-pandas:
     # Possible $PANDAS parameters:
