--- a/cpp/src/arrow/adapters/arrow-rados-cls/wf.yml
+++ b/cpp/src/arrow/adapters/arrow-rados-cls/wf.yml
@@ -1,7 +1,7 @@
 steps:
 - id: notebook
-  uses: docker://jcnitdgp25/skyhookdm-arrow:latest
-  runs: [./script.sh] 
+  uses: ./docker
+  runs: [./docker/script.sh] 
   options: 
     privileged: true
     ports:
